completed professional experience

--- a/index.html
+++ b/index.html
@@ -255,38 +255,43 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelor of Science in Computer Science</h4>
-              <h5>2017 - 2021</h5>
-              <p><em>FAST National University of Computer and Emerging Sciences, Islamabad, Pakistan</em></p>
+              <h5>Aug, 2017 - Jul, 2021</h5>
+              <p><em><b>FAST National University of Computer and Emerging Sciences, Islamabad</b></em></p>
               <p>A Bachelor of Science in Computer Science from FAST-NUCES provides a strong foundation in computer science principles and practices, including programming, algorithms, data structures, computer systems, and software engineering. Graduates are prepared for careers in software development, computer systems analysis, and other related fields, with the ability to design, develop and evaluate computer-based systems, as well as understand the impact of technology on society, organizations and individuals.</p>
             </div>
             <div class="resume-item">
               <h4>F.Sc. Pre-Engineering</h4>
-              <h5>2015 - 2017</h5>
-              <p><em>Aga Khan Higher Secondary School, Karachi</em></p>
+              <h5>Aug, 2015 - Jun, 2017</h5>
+              <p><em><b>Aga Khan Higher Secondary School, Karachi</b></em></p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Software Engineer</h4>
+              <h5>Sep, 2021 - Present</h5>
+              <p><em><b>TechnoGenics SMC PVT LTD, Lahore</b></em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>I developed microservices using <b>Flask, REST APIs, and MongoDB</b> to analyze nested IOCs in files or zip archives.</li>
+                <li>I created a fully automated backend service for subscribing to triggers based on user-defined queries. This service used <b>FastAPI, ElasticSearch, RabbitMQ, and REST APIs </b>to provide a seamless and efficient way for users to receive updates and notifications.</li>
+                <li>I implemented a feature in a case management system that allows for the approval and pending of cases. This feature was developed using the <b>Django, React, and GraphQL</b> stack.</li>
+                <li>I synchronized incoming data from web crawlers into a <b>Neo4j</b> DB.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Software Developer</h4>
+              <h5>Mar, 2021 - Aug, 2021</h5>
+              <p><em>Freelancer.com</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>I worked on a diverse range of projects that included data scraping and artificial intelligence techniques such as genetic algorithms using <b>Python</b></li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Python Developer Intern</h4>
+              <h5>Feb, 2021 - Mar, 2021</h5>
+              <p><em>Lyftron, Islamabad</em></p>
+              <ul>
+                <li>The tasks that were completed included the development and testing of <b>REST APIs</b>, data scraping and preparation, and management of a <b>MySQL</b> database using <b>Python</b>. These activities were focused on creating and maintaining a reliable and effective system for storing and accessing data.</li>
               </ul>
             </div>
           </div>
