--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
           <div data-aos="fade-up">
             <h5><b>Languages</b></h5>
             <div style="padding: 2%;">
-              <img src="assets/img/python.jpg" class="img" alt="">
-              <img src="assets/img/c++.png" class="img" alt="">
+              <img src="assets/img/python.png" class="img" alt="">
+              <img src="assets/img/c++.svg" class="img" alt="">
               <img src="assets/img/js.png" class="img" alt="">
               <img src="assets/img/ts.svg" class="img" alt="">
             </div>
@@ -194,7 +194,39 @@
               <img src="assets/img/unity.png" class="img" alt=""> 
             </div>
           </div>
-
+          <div data-aos="fade-up">
+            <h5><b>Database management systems</b></h5>
+            <div style="padding: 2%;">
+              <img src="assets/img/mogno.png" class="img" alt="">
+              <img src="assets/img/neo4j.png" class="img" alt="">
+              <img src="assets/img/postgresql.png" class="img" alt="">
+              <img src="assets/img/redis.jpg" class="img" alt="">
+              <img src="assets/img/elasticsearch.png" class="img" alt=""> 
+            </div>
+          </div>
+          <div data-aos="fade-up">
+            <h5><b>Application management</b></h5>
+            <div style="padding: 2%;">
+              <img src="assets/img/kubernetes.png" class="img" alt="">
+              <img src="assets/img/docker.webp" class="img" alt="">
+            </div>
+          </div>
+          <div data-aos="fade-up">
+            <h5><b>Data exchange management</b></h5>
+            <div style="padding: 2%;">
+              <img src="assets/img/restapi.png" class="img" alt="">
+              <img src="assets/img/kafka.png" class="img" alt="">
+              <img src="assets/img/rabbitmq.png" class="img" alt="">
+            </div>
+          </div>
+          <div data-aos="fade-up">
+            <h5><b>Others</b></h5>
+            <div style="padding: 2%;">
+              <img src="assets/img/git.png" class="img" alt="">
+              <img src="assets/img/github.png" class="img" alt="">
+              <img src="assets/img/bitbucket.png" class="img" alt="">
+            </div>
+          </div>
         </div>
 
       </div>
@@ -270,7 +302,7 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <!-- <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -384,10 +416,11 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section> -->
+    <!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- <section id="services" class="services">
       <div class="container">
 
         <div class="section-title">
@@ -429,10 +462,11 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section> -->
+    <!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
+    <!-- <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -454,7 +488,7 @@
                 <h3>Saul Goodman</h3>
                 <h4>Ceo &amp; Founder</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
@@ -467,7 +501,7 @@
                 <h3>Sara Wilsson</h3>
                 <h4>Designer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
@@ -480,7 +514,7 @@
                 <h3>Jena Karlis</h3>
                 <h4>Store Owner</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
@@ -493,7 +527,7 @@
                 <h3>Matt Brandon</h3>
                 <h4>Freelancer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
@@ -506,17 +540,18 @@
                 <h3>John Larson</h3>
                 <h4>Entrepreneur</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section> -->
+    <!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <!-- <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
@@ -583,7 +618,7 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>End Contact Section -->
 
   </main><!-- End #main -->
 
