--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <div class="row">
           <div class="col-lg-3" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid rounded-6" style="box-shadow: 10px 10px 5px #ccc;" alt="">
+            <img src="assets/img/profile-img.png" class="img-fluid rounded-6" style="box-shadow: 10px 10px 5px #ccc;" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer</h3>
