--- a/index.html
+++ b/index.html
@@ -45,14 +45,11 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Abdul Jalil</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/abduljalilmemon" class=""><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/abdul-jalil-memon/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -73,7 +70,9 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Abdul Jalil</h1>
-      <p>I'm a <span class="typed" data-typed-items="Software Engineer."></span></p>
+      <p>I'm a
+        <span class="typed" data-typed-items="Software Engineer., Python Developer., Computer Scientist., Freelancer."></span>
+      </p>
     </div>
   </section><!-- End Hero -->
 
@@ -81,14 +80,29 @@
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
-      <div class="container">
-
+      <div class="container-fluid">
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a software engineer with more than one year of experience and a strong foundation in Python programming. I have experience designing and implementing efficient, scalable software solutions. I have a passion for finding creative solutions to complex technical problems. As a lifelong learner, I am always looking to expand my skills and knowledge, and I am excited to join a dynamic and innovative team where I can apply my expertise in Python to real-world challenges.</p>
+        </div>
+        <div style="padding: 1%;">
+          <p>
+            Greetings! I'm a Software Engineer on a mission at TechnoGenics, where cybersecurity meets cutting-edge innovation. My days are a whirlwind of crafting backend microservices that sift through the digital cosmos, swiftly notifying users of any foul play - all thanks to the Python magic conjured with Django, FastAPI, and Flask. 🐍✨
+          </p>
+          <p>
+            But that's not all! I'm the data whisperer, choreographing a symphony of CRUD operations with MongoDB, orchestrating a data ballet into Neo4j from diverse web crawlers. And oh, let's not forget the pièce de résistance - building automated subscription spectacles using ElasticSearch, RabbitMQ, and REST APIs! 🎩🎪
+          </p>
+          <p>
+            With a degree in Computer Science, I'm equipped with the superpower of Python prowess and a formidable arsenal of data structures. My secret weapon? AI wizardry - especially genetic algorithms! 🧠🧬
+          </p>
+          <p>
+            I'm not just a lone crusader; I thrive in a dynamic team where ideas spark, and innovation ignites. I yearn to tackle the most intricate challenges, fueled by a desire to create solutions that impact the world for the better.
+          </p>
+          <p>
+            Here's to joining forces with a team that celebrates ingenuity, embraces collaboration, and thrives on solving the unsolvable. Together, we'll conquer the cyber frontier and leave a legacy of innovation! 🚀🌌
+          </p>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-lg-3" data-aos="fade-right">
             <img src="assets/img/profile-img.png" class="img-fluid rounded-6" style="box-shadow: 10px 10px 5px #ccc;" alt="">
           </div>
@@ -98,21 +112,19 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>13 Aug 1999</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>abduljalilmemon.github.io/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+92 3477733113</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lahore, Karachi</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Karachi, Sindh</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>abduljaleelmemon3@gmail.com</span></li>
                 </ul>
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </section><!-- End About Section -->
@@ -177,7 +189,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Summary</h3>
+            <!-- <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Abdul Jalil</h4>
               <p><em>Experienced and deadline-focused Software Engineer with 1+ year of experience, skilled in designing and developing user-centered software solutions from concept to delivery.</em></p>
@@ -186,7 +198,7 @@
                 <li>+92 3477733113</li>
                 <li>abduljaleelmemon3@gmail.com</li>
               </ul>
-            </div>
+            </div> -->
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
@@ -553,12 +565,11 @@
     <!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
-    <!-- <section id="contact" class="contact">
+    <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row" data-aos="fade-in">
@@ -568,22 +579,21 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Karachi, Pakistan</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>abduljaleelmemon3@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+92 347 7733113</p>
               </div>
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=Karachi, Pakistan&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
